# vakyume

./: .gitignore  1.py  10.py  11.py  2.py  2vakyume_2025.py  3.py  4.py  5.py  5_example.py  6.py  7.py  8.py  9.py  LICENSE  README.md  Tue-Jan-21-11:04:28-CST-2025.py  __init__.py.bak  _vakyume_Wed-Jan-22-17:15:00-CST-2025.py  arb.py  benchmark_llm_raw.sh  bs.bs  debug_analysis.py  equation_sharder.py  feb.py  gay.y  kwarg_solver_decorator.py  kwasak.py  llm.py  make_vakyume.py  pyproject.toml  quick_test.py  quick_verify_vake.py  solver_decorator.py  suck_consts.py  test_dummy.py  test_fs.py  test_harness_thing.py  test_llm.py  test_shards.py  (+18 more)
backup_clutter/: config.py  equation_sharder_new.py  kwasak.py  llm.py  tru.py  vakyume copy.py  vakyume.cpp  vakyume_cpp.py  vakyume_equations_backup.py  vakyume_master.py  vakyume_test
benchmark_results/: llama3.2_analysis_20260303_222730.json  phi3_analysis_20260303_222730.json  phi3_analysis_20260304_145959.json  summary_20260303_214808.txt  summary_20260303_214855.txt  summary_20260303_215442.txt  summary_20260303_215907.txt  summary_20260303_215912.txt  summary_20260303_222730.txt  summary_20260304_145959.txt
c++/: lib.cpp  make_c++_external.sh  o  simp_lib.py  test.py  test_c++.cpp  vakyume.cpp
chapters/: 01_vacuum_theory.py  02_fluid_flow_vacuum_lines.py  05_process_app_1.py  06_process_app_2.py  06_process_app_ii.py  07_precondensors.py  08_selecting_pump.py  1.py  10.py  10_liquid_ring.py  11.py  11_rotary_piston_vane.py  2.py  2_fluid_flow_vacuum_lines.py  3.py  4.py  5_process_app_i.py  6_process_app_ii.py  7.py  (+8 more)
(+2466 files in other folders)
