[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vakyume"
version = "0.1.0"
description = "A Python Library for Vacuum Design"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "numpy",
    "ollama",
    "pandas",
    "pymupdf",
    "scipy",
    "sympy",
    "timeout-decorator",
]

[tool.setuptools]
packages = ["vakyume"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "llm: requires a running Ollama LLM instance (deselect with '-m not llm')",
    "slow: long-running test",
]
addopts = "-m 'not llm'"
